# mc_server_managger

./: .gitignore  README.md
servermanagger/: Cargo.toml
servermanagger/src/: main.rs
