[package]
name = "servermanagger"
version = "0.1.0"
edition = "2024"

[dependencies]
async-process = "2.3.0"
dotenv = "0.15.0"
serenity = "0.12.4"
#sqlx = {version = "0.8.4", features = ["mysql", "runtime-tokio-native-tls"]}
sqlx = {version = "0.7.3", features = ["mysql", "runtime-tokio-native-tls"]}
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
